Fix "Z-index"
忘记给它设置 “Z-index” 值了！现在补上

--- a/static/pio.css
+++ b/static/pio.css
@@ -13,6 +13,7 @@
 .pio-container{
     left: 0;
     bottom: 0;
+    z-index: 52;
     position: fixed;
     user-select: none;
 }
